@@ -2,8 +2,8 @@
 #path.hybridbackforward.enable = 1
 #path.hybridbackforward.partition = 0.0
 ##
-film.width = 640
-film.height = 480
+film.width = 800
+film.height = 800
 ##
 #path.clamping.variance.maxvalue = 1
 ##
