@@ -1,25 +1,31 @@
 #scene.camera.type = stereo
 #scene.camera.type = environment
 #scene.camera.type = orthographic
-scene.camera.lookat.orig = 0.5 -1.4 1.7
-scene.camera.lookat.target = 0.0 0.0 0.4
+#scene.camera.lookat.orig = 0.5 -1.4 1.7
+#scene.camera.lookat.target = 0.0 0.0 0.4
 #scene.camera.screenwindow = 0.5 1.0 0.0 1.0
+scene.camera.lookat.orig = 0.309202552 -0.865767121 1.20392668
+scene.camera.lookat.target = -0.190797448 0.534232795 -0.0960733816
 ################################################################################
 scene.volumes.volglass.type = clear
 scene.volumes.volglass.absorption = 0.1 0.1 0.1
 scene.volumes.volglass.ior = 1.45
 ################################################################################
 scene.materials.shell.type = disney
-scene.materials.shell.basecolor = 0.6 0.0 0.0
+scene.materials.shell.basecolor = 0.5 0.0 0.0
 ##
-scene.materials.shell.metallic = 1.0
-scene.materials.shell.roughness = 0.1
+#scene.materials.shell.metallic = 1.0
+#scene.materials.shell.roughness = 0.1
 ##
 #scene.materials.shell.subsurface = 0.5
 ##
 #scene.materials.shell.specular = 0.5
 #scene.materials.shell.roughness = 0.2
 #scene.materials.shell.clearcoatgloss = 1.0
+##
+scene.materials.shell.roughness = 1.0
+scene.materials.shell.sheen = 10.0
+scene.materials.shell.sheentint = 0.0
 ##
 scene.materials.whitematte.type = matte
 scene.materials.whitematte.kd = 0.75 0.75 0.75
