@@ -1,0 +1,39 @@
+film.width = 1024
+film.height = 1024
+# Use a value > 0 to enable batch mode
+batch.halttime = 0
+scene.file = scenes/luxball/texball-triplanar-bump.scn
+opencl.cpu.use = 1
+opencl.gpu.use = 1
+# Select the OpenCL platform to use (0=first platform available, 1=second, etc.)
+#opencl.platform.index = 0
+# The string select the OpenCL devices to use (i.e. first "0" disable the first
+# device, second "1" enable the second).
+#opencl.devices.select = 10
+# Use a value of 0 to enable default value
+opencl.gpu.workgroup.size = 64
+screen.refresh.interval = 100
+path.maxdepth = 8
+path.russianroulette.depth = 5
+#path.russianroulette.cap = .5
+light.maxdepth = 8
+light.russianroulette.depth = 5
+#light.russianroulette.cap = .5
+################################################################################
+# Pixel filter with a large radius for BAKE
+################################################################################
+film.filter.type = BLACKMANHARRIS
+film.filter.width = 2
+################################################################################
+# Film outputs
+################################################################################
+film.outputs.0.type = RGB_IMAGEPIPELINE
+film.outputs.0.index = 0
+################################################################################
+# Film image pipeline plug-ins
+################################################################################
+film.imagepipelines.0.0.type = TONEMAP_LINEAR
+film.imagepipelines.0.0.scale = 1.0
+film.imagepipelines.0.1.type = GAMMA_CORRECTION
+film.imagepipelines.0.1.value = 2.2
+
